@@ -7,6 +7,7 @@ snaplogger (1.0.44.0~bionic) bionic; urgency=high
   * Added a function to change the timestamp.
   * Fixed the "no-repeat" name, had to use the `no_repeat` variable.
   * Added some documentation.
+  * Added support to increase the current severity temporarily.
   * Various cleanups.
 
  -- Alexis Wilke <alexis@m2osw.com>  Mon, 07 Mar 2022 17:51:46 -0800
